<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignMargins"
            android:background="@drawable/back"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="@dimen/bigPadding"
            android:rowCount="3"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/buttonHome"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:text="@string/home" />

            <Button
                android:id="@+id/buttonChat"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/chat" />

            <Button
                android:id="@+id/buttonProfile"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/profile" />

            <Button
                android:id="@+id/buttonWidgets"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/widgets" />

            <Button
                android:id="@+id/buttonSettings"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/settings" />

            <Button
                android:id="@+id/buttonLogout"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/logout" />

        </GridLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
