<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChatFragment">

    <TextView
        android:id="@+id/chatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/chat_title"
        android:textSize="@dimen/bigTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chatMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/defMargin"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/chatInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatTitle" />

    <EditText
        android:id="@+id/chatInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/chat_input_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatSendButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chatSendButton"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defMargin"
        android:text="@string/chat_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
